src/test/ui/span/regions-infer-borrow-scope-within-loop.stderr
error[E0597]: `*x` does not live long enough
  --> $DIR/regions-infer-borrow-scope-within-loop.rs:28:5
   |
24 |         y = borrow(&*x);
   |                     -- borrow occurs here
...
28 |     } //~ ERROR `*x` does not live long enough
   |     ^ `*x` dropped here while still borrowed
29 |     assert!(*y != 0);
30 | }
   | - borrowed value needs to live until here

error: aborting due to previous error

